# ti-libdce

./: .gitignore  Makefile.am  README  README.md  autogen.sh  configure.ac  dce_priv.h  dce_rpc.h  libdce.c  libdce.h  libdce.pc.in  libdce_linux.c  memplugin.h  memplugin_linux.c
